# mickey

./: .gitignore  README.md  alloc.c  bst.mks  bst.mky  dune-project  heap.asm  linked_list.mks  linked_list.mky  list.mks  list.mky  math.mks  math.mky  mickey  prelude.asm  prelude.mks  stdlib.mks  stdlib.mky  test.mky
lib/: ast.ml  compile.ml  compile.mli  dune  exp.ml  exp.mli  instruction.ml  instruction.mli  lexer.mll  parser.mly  program.ml  program.mli  scope.ml  scope.mli  stmt.ml  stmt.mli  type.ml  type.mli  type_check.ml  type_check.mli
lib/assembler/: assemble.ml  assemble.mli  dune  lexer.mll  parser.mly
lib/common/: dune  instruction.ml  instruction.mli  object.ml  object.mli
lib/linker/: dune  link.ml  link.mli
lib/mickey/: annotate.ml  compile.ml  compile.mli  dune  env.ml  env.mli  exp.ml  exp.mli  lexer.mll  parser.mly  preprocess.ml  preprocess.mli  program.ml  program.mli  stmt.ml  stmt.mli  type.ml  type.mli  type_check.ml  type_check.mli
lib/simulator/: dune  state.ml  state.mli
test/: dune
test/assembler/: dune  test_assembler.ml
test/linker/: dune  test_linker.ml
test/mickey/: dune  test_mickey.ml
test/simulator/: dune  test_simulator.ml
